Avoid changing accessibility focus on page load for WebView (vs Chrome)

Chrome fires accessibility events on page load, and when the web page
moves focus. This makes sense.

WebView shouldn't do this, because there may be more than one WebView
on the page and they might all be fighting with each other.

We already had a boolean shouldFocusOnPageLoad that's false when we're
in a WebView, so we can avoid firing a focus event when the page loads,
but there were two more places that sometimes moved accessibility
focus on load, and those need to respect the preference too.

Bug: 757948
Change-Id: I3c1b60ea5f81b3bb85776dfa950869a3e96c7cfa
Reviewed-on: https://chromium-review.googlesource.com/627166
Reviewed-by: Paul Miller <paulmiller@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496589}
Former-commit-id: 91cc2b77e3f79838a0178e8e27096132e64f17f3